--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>Codefreaks</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,7 +51,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Your next<br>Interactive<br>Adventure!</h1>
+                <h1>SOFTWARE DEVELOPMENT<br> AND<br>CONSULTING </h1>
                 <button class="cta">Hire Us
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -64,16 +64,16 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Aim</h3>
-                  <p>Want to create a digital platform for your business? Hire us today.</p>
+                  <h3>software development</h3>
+                  <p>Our strong technical team is strongly focused on developing customer oriented software solutions.</p>
                 </a>
                 <a href="#0">
-                  <h3>Lorem ipsum</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Software consulting</h3>
+                  <p>Our software experts will evaluate, analyze, explore, and provide you with wide range of solutions.</p>
                 </a>
                 <a href="#0">
-                  <h3>Lorem &amp; ipsum</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Maintenance & support</h3>
+                  <p>We provide 24*7 maintenance & support service for all our clients to resolve all the issues in real-time.</p>
                 </a>
               </div>
             </div>
@@ -86,7 +86,7 @@
                   <li class="slider--item slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="mayank">
+                        <img src="https://scontent.fpat3-3.fna.fbcdn.net/v/t1.6435-9/69603467_2512710785616800_2083908790465331200_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=174925&_nc_ohc=ITfE0DIZCT8AX9tVLhN&_nc_ht=scontent.fpat3-3.fna&oh=ae633dc6a546600d17e6efb6a9578607&oe=60CB3BE1" alt="mayank">
                       </div>
                       <p class="slider--item-title">MAYANK KAUSHIK</p>
                       <p class="slider--item-description">Network and Security Expert <br /><br /> 
@@ -99,7 +99,7 @@
                   <li class="slider--item slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="anchit">
+                        <img src="https://scontent.fpat3-3.fna.fbcdn.net/v/t1.6435-9/42412624_2161466454175065_956921518162444288_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=84a396&_nc_ohc=O4yJx17MvlMAX_36eJ2&_nc_ht=scontent.fpat3-3.fna&oh=15d52348da816e62dca9ac34286e7161&oe=60CB1C9B" alt="anchit">
                       </div>
                       <p class="slider--item-title">ANCHIT CHANDRA</p>
                       <p class="slider--item-description">Backend Developer/ Database Management Head <br /><br /> 
@@ -125,7 +125,7 @@
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="aakash">
+                        <img src="https://media-exp1.licdn.com/dms/image/C5603AQHY0jKH0Gnq3g/profile-displayphoto-shrink_800_800/0/1620619255892?e=1626912000&v=beta&t=TdmQrnFnw8JnAeyvoOKYBzgf__jT6dQlFDsz4MrZE-c" alt="aakash">
                       </div>
                       <p class="slider--item-title">AKASH SINGH</p>
                       <p class="slider--item-description">Cross-Platform Developer <br /><br /> 
@@ -139,7 +139,7 @@
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="devesh">
+                        <img src="https://media-exp1.licdn.com/dms/image/C5103AQFwAq7aOqOMpw/profile-displayphoto-shrink_200_200/0/1584081112010?e=1622073600&v=beta&t=g4KXHL90F5xhhnJ1lGxPySDKQAiEbIPxNR9CVJ_q9kY" alt="devesh">
                       </div>
                       <p class="slider--item-title">DEVESH TIWARY</p>
                       <p class="slider--item-description">Android Developer <br /><br /> 
@@ -153,9 +153,9 @@
                   <li class="slider--item slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="bhaskar">
+                        <img src="https://scontent.fpat3-2.fna.fbcdn.net/v/t1.6435-9/83425300_2560504314272944_3004759618497806336_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=wBsnm21dhpMAX_ZNJli&_nc_ht=scontent.fpat3-2.fna&oh=36ea0d436de583547780a2ad0fac8dea&oe=60CD2CDD" alt="bhaskar">
                       </div>
-                      <p class="slider--item-title">BHASKAR KUMAR</p>
+                      <p class="slider--item-title">BHASKAR MISHRA</p>
                       <p class="slider--item-description">Graphic and Logo Designer/ Social Media Platforms Manager <br /><br /> 
                         <a href="mailto:bhaskarkumar3111@gmail.com?Subject=CodeFreak%Designs"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a> &nbsp;
                         <a href="https://www.instagram.com/morningstar_1131/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a> &nbsp;
@@ -166,10 +166,10 @@
                   <li class="slider--item slider--item">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="ankit">
+                        <img src="https://scontent.fpat3-1.fna.fbcdn.net/v/t31.18172-8/24273675_944521019030119_6444673728209598120_o.jpg?_nc_cat=105&ccb=1-3&_nc_sid=a4a2d7&_nc_ohc=kLgR4-r0IsEAX9SV9IP&_nc_ht=scontent.fpat3-1.fna&oh=8d6f9922d337150203ce51ff4494489c&oe=60CAC0AE" alt="ankit">
                       </div>
                       <p class="slider--item-title">ANKIT KUMAR</p>
-                      <p class="slider--item-description">Content Creator <br /><br /> 
+                      <p class="slider--item-description">Marketing and SEO  <br /><br /> 
                         <a href="mailto:ankits9540@gmail.com?Subject=CodeFreak%Designs"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a> &nbsp;
                         <a href="https://www.instagram.com/ankits9540/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a> &nbsp;
                         <a href="https://www.facebook.com/profile.php?id=100004166887734"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
@@ -200,7 +200,8 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>Delivering <br>Software <br>
+Engineering<br> Excellence</h2>
                 <!-- <a href="#0">Ch out Team
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -214,14 +215,15 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Development</h3>
                 </a>
                 <a href="#0">
-                  <h3>Ideology</h3>
+                  <h3>Design</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Consulting</h3>
                 </a>
+                
               </div>
             </div>
           </li>
@@ -247,7 +249,7 @@
             <div class="hire">
               <h2>You want us to do</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request" action="https://formspree.io/f/xgepyzpp" method="POST">
+              <form class="work-request" action="https://formspree.io/f/xleajzpq" method="POST">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
@@ -258,7 +260,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      App Design
+                     App Developement
                     </label>
                     <input id="opt-2" type="checkbox" value="graphic design">
                     <label for="opt-2">
@@ -268,7 +270,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Graphic Design
+                       Design
                     </label>
                     <input id="opt-3" type="checkbox" value="motion design">
                     <label for="opt-3">
@@ -278,7 +280,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Motion Design
+                      Web Developement
                     </label>
                   </span>
                   <span class="options-b">
@@ -290,7 +292,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      UI Design
+                     Consulting
                     </label>
                     <input id="opt-5" type="checkbox" value="webdesign">
                     <label for="opt-5">
@@ -300,7 +302,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Webdesign
+                      QA & Testing
                     </label>
                     <input id="opt-6" type="checkbox" value="marketing">
                     <label for="opt-6">
